prod_event/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: trading-strategy-analysis-ingress
  namespace: argo-events
spec:
  rules:
    - http:
        paths:
          - path: /trading-strategy-analysis
            pathType: Prefix
            backend:
              service:
                name: trading-strategy-analysis-webhook-eventsource-svc # trading-strategy-analysis-service
                port: 
                  number: 8080
